<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".controller.fragment.EditFragment">

    <TextView
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_alignParentTop="true"
        android:text="@string/edit_word" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/arabic_form_edit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_edit"
        android:hint="@string/arabic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/arabic_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/english_form_edit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arabic_form_edit"
        android:hint="@string/english">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/english_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/french_form_edit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/english_form_edit"
        android:hint="@string/french">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/french_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/persian_form_edit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/french_form_edit"
        android:hint="@string/persian">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/persian_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/persian_form_edit"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_save_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>



</RelativeLayout>